Switch on DAY period.

--- a/openfisca_pf/tests/impot_societe/recapitulation_imposition/tests_recapitulation_imposition.yaml
+++ b/openfisca_pf/tests/impot_societe/recapitulation_imposition/tests_recapitulation_imposition.yaml
@@ -1,5 +1,5 @@
 - name: is_element_imposition_benefice_imposable_override
-  period: 2024
+  period: 2024-01-01
   input:
     is_element_imposition_benefice_imposable: 500
     is_resultat_fiscal_benefice_apres_report_deficitaire: 1000
@@ -7,14 +7,14 @@
     is_element_imposition_benefice_imposable: 500
 
 - name: is_element_imposition_benefice_imposable_default
-  period: 2024
+  period: 2024-01-01
   input:
     is_resultat_fiscal_benefice_apres_report_deficitaire: 1000
   output:
     is_element_imposition_benefice_imposable: 1000
 
 - name: is_element_imposition_calcul_due
-  period: 2024
+  period: 2024-01-01
   input:
     is_element_imposition_benefice_imposable: 1000
     is_element_imposition_calcul_taux: 0.1
@@ -22,7 +22,7 @@
     is_element_imposition_calcul_due: 100
 
 - name: is_element_imposition_calcul_due_override
-  period: 2024
+  period: 2024-01-01
   input:
     is_element_imposition_benefice_imposable: 1000
     is_element_imposition_calcul_taux: 0.1
@@ -31,7 +31,7 @@
     is_element_imposition_calcul_due: 50
 
 - name: is_element_imposition_impot_du
-  period: 2024
+  period: 2024-01-01
   input:
     is_element_imposition_calcul_due: 100
     is_element_imposition_deduction_cas_echeant: 10
@@ -39,7 +39,7 @@
     is_element_imposition_impot_du: 90
 
 - name: is_element_imposition_impot_du_via_due
-  period: 2024
+  period: 2024-01-01
   input:
     is_element_imposition_benefice_imposable: 1000
     is_element_imposition_calcul_taux: 0.1
@@ -48,7 +48,7 @@
     is_element_imposition_impot_du: 90
 
 - name: is_element_imposition_impot_du_via_du_override
-  period: 2024
+  period: 2024-01-01
   input:
     is_element_imposition_benefice_imposable: 1000
     is_element_imposition_calcul_taux: 0.1
