--- a/openfisca_pf/tests/impot_societe/resultat_fiscal/tests_resultat_fiscal.yaml
+++ b/openfisca_pf/tests/impot_societe/resultat_fiscal/tests_resultat_fiscal.yaml
@@ -1,5 +1,5 @@
 - name: is_resultat_fiscal_reintegrations_total
-  period: 2024
+  period: 2024-01-01
   input:
     is_resultat_fiscal_reintegrations_benefice_net_comptable: 100
     is_resultat_fiscal_reintegrations_contribution_supplementaire: 200
@@ -15,7 +15,7 @@
     is_resultat_fiscal_reintegrations_total: 4601
 
 - name: is_resultat_fiscal_deductions_total
-  period: 2024
+  period: 2024-01-01
   input:
     is_resultat_fiscal_deductions_perte_nette_comptable: 100
     is_resultat_fiscal_deductions_plus_values_non_imposables: 200
@@ -26,7 +26,7 @@
     is_resultat_fiscal_deductions_total: 1500
 
 - name: is_resultat_fiscal_benefice_avant_report_deficitaire_positif
-  period: 2024
+  period: 2024-01-01
   input:
     is_resultat_fiscal_reintegrations_total: 100
     is_resultat_fiscal_deductions_total: 10
@@ -34,7 +34,7 @@
     is_resultat_fiscal_benefice_avant_report_deficitaire: 90
 
 - name: is_resultat_fiscal_benefice_avant_report_deficitaire_negatif
-  period: 2024
+  period: 2024-01-01
   input:
     is_resultat_fiscal_reintegrations_total: 100
     is_resultat_fiscal_deductions_total: 101
@@ -42,7 +42,7 @@
     is_resultat_fiscal_benefice_avant_report_deficitaire: 0
 
 - name: is_resultat_fiscal_deficit_total_positif
-  period: 2024
+  period: 2024-01-01
   input:
     is_resultat_fiscal_reintegrations_total: 10
     is_resultat_fiscal_deductions_total: 100
@@ -50,7 +50,7 @@
     is_resultat_fiscal_deficit_total: 90
 
 - name: is_resultat_fiscal_deficit_total_negatif
-  period: 2024
+  period: 2024-01-01
   input:
     is_resultat_fiscal_reintegrations_total: 101
     is_resultat_fiscal_deductions_total: 100
@@ -58,7 +58,7 @@
     is_resultat_fiscal_deficit_total: 0
 
 - name: is_resultat_fiscal_benefice_apres_report_deficitaire
-  period: 2024
+  period: 2024-01-01
   input:
     is_resultat_fiscal_benefice_avant_report_deficitaire: 5140
     is_resultat_fiscal_montant_deficits_anterieurs_reportables_effectivement_imputes: 300
